comp.output
Terminals which are not used

   ELLIPSE
   OU_AFFECT
   BREAK
   CONTINUE
   '?'
   ':'


State 147 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: genesis

    2 genesis: genesis declaration
    3        | declaration
    4        | '{' multiple_statement '}'

    5 declaration: type multiple_declaration_variable ';'
    6            | declaration_function

    7 type: VOID
    8     | CHAR
    9     | INT32
   10     | INT64

   11 multiple_declaration_variable: declaration_variable
   12                              | multiple_declaration_variable ',' declaration_variable

   13 declaration_variable: ID
   14                     | ID '[' INT ']'
   15                     | ID '=' expression

   16 assignment_variable: expr_var '='

   17 expression: expr_var MUL_AFFECT
   18           | expr_var DIV_AFFECT
   19           | expr_var MOD_AFFECT
   20           | expr_var PLUS_AFFECT
   21           | expr_var MOINS_AFFECT
   22           | expr_var DEC_GAUCHE_AFFECT
   23           | expr_var DEC_DROITE_AFFECT
   24           | expr_var ET_AFFECT
   25           | expr_var OU_EXCL_AFFECT expression

   26 declaration_function: type ID '(' ')' declaration_function_statement
   27                     | type ID '(' arguments_list ')' declaration_function_statement

   28 declaration_function_statement: ';'
   29                               | '{' multiple_statement '}'

   30 argument: type
   31         | type ID
   32         | type ID '[' ']'

   33 arguments_list: argument
   34               | arguments_list ',' argument

   35 simple_statement: iteration_statement
   36                 | selection_statement
   37                 | type declaration_variable ';'
   38                 | expression ';'
   39                 | return ';'
   40                 | ';'

   41 multiple_statement: multiple_statement statement
   42                   | statement

   43 return: RETURN
   44       | RETURN expression

   45 iteration_statement: WHILE '(' expression ')' statement
   46                    | FOR '(' loop_expression ';' loop_expression ';' loop_expression ')' statement

   47 statement: '{' multiple_statement '}'
   48          | simple_statement

   49 loop_expression: expression

   50 expression: '(' expression ')'
   51           | expression ',' expression
   52           | expression EGAL expression
   53           | expression DIFF expression
   54           | expression '<' expression
   55           | expression INFERIEUR_EGAL expression
   56           | expression '>' expression
   57           | expression SUPERIEUR_EGAL expression
   58           | expression ET expression
   59           | expression OU expression
   60           | assignment_variable
   61           | '-' expression
   62           | '~' expression
   63           | '!' expression
   64           | INT
   65           | INCREMENT expr_var
   66           | DECREMENT expr_var
   67           | expr_var INCREMENT
   68           | expr_var DECREMENT
   69           | expr_var
   70           | ID '(' expression ')'
   71           | ID '(' ')'
   72           | expression '+' expression
   73           | expression '-' expression
   74           | expression '*' expression
   75           | expression '/' expression
   76           | expression '%' expression
   77           | expression '&' expression
   78           | expression '|' expression
   79           | expression '^' expression
   80           | expression DEC_GAUCHE expression
   81           | expression DEC_DROITE expression

   82 expr_var: ID '[' expression ']'
   83         | ID

   84 selection_statement: IF '(' expression ')' statement ELSE statement
   85                    | IF '(' expression ')' statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 63
'%' (37) 76
'&' (38) 77
'(' (40) 26 27 45 46 50 70 71 84 85
')' (41) 26 27 45 46 50 70 71 84 85
'*' (42) 74
'+' (43) 72
',' (44) 12 34 51
'-' (45) 61 73
'/' (47) 75
':' (58)
';' (59) 5 28 37 38 39 40 46
'<' (60) 54
'=' (61) 15 16
'>' (62) 56
'?' (63)
'[' (91) 14 32 82
']' (93) 14 32 82
'^' (94) 79
'{' (123) 4 29 47
'|' (124) 78
'}' (125) 4 29 47
'~' (126) 62
error (256)
ELLIPSE (258)
VOID (259) 7
DEC_GAUCHE_AFFECT (260) 22
DEC_DROITE_AFFECT (261) 23
PLUS_AFFECT (262) 20
MOINS_AFFECT (263) 21
DIV_AFFECT (264) 18
MUL_AFFECT (265) 17
MOD_AFFECT (266) 19
ET_AFFECT (267) 24
OU_AFFECT (268)
OU_EXCL_AFFECT (269) 25
DEC_DROITE (270) 81
DEC_GAUCHE (271) 80
SUPERIEUR_EGAL (272) 57
INFERIEUR_EGAL (273) 55
DIFF (274) 53
EGAL (275) 52
ET (276) 58
OU (277) 59
INCREMENT (278) 65 67
DECREMENT (279) 66 68
CHAR (280) 8
INT32 (281) 9
INT64 (282) 10
BREAK (283)
RETURN (284) 43 44
CONTINUE (285)
WHILE (286) 45
FOR (287) 46
IF (288) 84 85
ELSE (289) 84
ID (290) 13 14 15 26 27 31 32 70 71 82 83
INT (291) 14 64
NEG (292)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
program (62)
    on left: 1, on right: 0
genesis (63)
    on left: 2 3 4, on right: 1 2
declaration (64)
    on left: 5 6, on right: 2 3
type (65)
    on left: 7 8 9 10, on right: 5 26 27 30 31 32 37
multiple_declaration_variable (66)
    on left: 11 12, on right: 5 12
declaration_variable (67)
    on left: 13 14 15, on right: 11 12 37
assignment_variable (68)
    on left: 16, on right: 60
expression (69)
    on left: 17 18 19 20 21 22 23 24 25 50 51 52 53 54 55 56 57 58
    59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80 81, on right: 15 25 38 44 45 49 50 51 52 53 54 55 56 57 58 59
    61 62 63 70 72 73 74 75 76 77 78 79 80 81 82 84 85
declaration_function (70)
    on left: 26 27, on right: 6
declaration_function_statement (71)
    on left: 28 29, on right: 26 27
argument (72)
    on left: 30 31 32, on right: 33 34
arguments_list (73)
    on left: 33 34, on right: 27 34
simple_statement (74)
    on left: 35 36 37 38 39 40, on right: 48
multiple_statement (75)
    on left: 41 42, on right: 4 29 41 47
return (76)
    on left: 43 44, on right: 39
iteration_statement (77)
    on left: 45 46, on right: 35
statement (78)
    on left: 47 48, on right: 41 42 45 46 84 85
loop_expression (79)
    on left: 49, on right: 46
expr_var (80)
    on left: 82 83, on right: 16 17 18 19 20 21 22 23 24 25 65 66 67
    68 69
selection_statement (81)
    on left: 84 85, on right: 36


state 0

    0 $accept: . program $end

    VOID   shift, and go to state 1
    CHAR   shift, and go to state 2
    INT32  shift, and go to state 3
    INT64  shift, and go to state 4
    '{'    shift, and go to state 5

    program               go to state 6
    genesis               go to state 7
    declaration           go to state 8
    type                  go to state 9
    declaration_function  go to state 10


state 1

    7 type: VOID .

    $default  reduce using rule 7 (type)


state 2

    8 type: CHAR .

    $default  reduce using rule 8 (type)


state 3

    9 type: INT32 .

    $default  reduce using rule 9 (type)


state 4

   10 type: INT64 .

    $default  reduce using rule 10 (type)


state 5

    4 genesis: '{' . multiple_statement '}'

    VOID       shift, and go to state 1
    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    CHAR       shift, and go to state 2
    INT32      shift, and go to state 3
    INT64      shift, and go to state 4
    RETURN     shift, and go to state 13
    WHILE      shift, and go to state 14
    FOR        shift, and go to state 15
    IF         shift, and go to state 16
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '{'        shift, and go to state 22
    ';'        shift, and go to state 23
    '('        shift, and go to state 24

    type                 go to state 25
    assignment_variable  go to state 26
    expression           go to state 27
    simple_statement     go to state 28
    multiple_statement   go to state 29
    return               go to state 30
    iteration_statement  go to state 31
    statement            go to state 32
    expr_var             go to state 33
    selection_statement  go to state 34


state 6

    0 $accept: program . $end

    $end  shift, and go to state 35


state 7

    1 program: genesis .
    2 genesis: genesis . declaration

    VOID   shift, and go to state 1
    CHAR   shift, and go to state 2
    INT32  shift, and go to state 3
    INT64  shift, and go to state 4

    $default  reduce using rule 1 (program)

    declaration           go to state 36
    type                  go to state 9
    declaration_function  go to state 10


state 8

    3 genesis: declaration .

    $default  reduce using rule 3 (genesis)


state 9

    5 declaration: type . multiple_declaration_variable ';'
   26 declaration_function: type . ID '(' ')' declaration_function_statement
   27                     | type . ID '(' arguments_list ')' declaration_function_statement

    ID  shift, and go to state 37

    multiple_declaration_variable  go to state 38
    declaration_variable           go to state 39


state 10

    6 declaration: declaration_function .

    $default  reduce using rule 6 (declaration)


state 11

   65 expression: INCREMENT . expr_var

    ID  shift, and go to state 40

    expr_var  go to state 41


state 12

   66 expression: DECREMENT . expr_var

    ID  shift, and go to state 40

    expr_var  go to state 42


state 13

   43 return: RETURN .
   44       | RETURN . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    $default  reduce using rule 43 (return)

    assignment_variable  go to state 26
    expression           go to state 43
    expr_var             go to state 33


state 14

   45 iteration_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 44


state 15

   46 iteration_statement: FOR . '(' loop_expression ';' loop_expression ';' loop_expression ')' statement

    '('  shift, and go to state 45


state 16

   84 selection_statement: IF . '(' expression ')' statement ELSE statement
   85                    | IF . '(' expression ')' statement

    '('  shift, and go to state 46


state 17

   70 expression: ID . '(' expression ')'
   71           | ID . '(' ')'
   82 expr_var: ID . '[' expression ']'
   83         | ID .

    '['  shift, and go to state 47
    '('  shift, and go to state 48

    $default  reduce using rule 83 (expr_var)


state 18

   64 expression: INT .

    $default  reduce using rule 64 (expression)


state 19

   61 expression: '-' . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 49
    expr_var             go to state 33


state 20

   63 expression: '!' . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 50
    expr_var             go to state 33


state 21

   62 expression: '~' . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 51
    expr_var             go to state 33


state 22

   47 statement: '{' . multiple_statement '}'

    VOID       shift, and go to state 1
    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    CHAR       shift, and go to state 2
    INT32      shift, and go to state 3
    INT64      shift, and go to state 4
    RETURN     shift, and go to state 13
    WHILE      shift, and go to state 14
    FOR        shift, and go to state 15
    IF         shift, and go to state 16
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '{'        shift, and go to state 22
    ';'        shift, and go to state 23
    '('        shift, and go to state 24

    type                 go to state 25
    assignment_variable  go to state 26
    expression           go to state 27
    simple_statement     go to state 28
    multiple_statement   go to state 52
    return               go to state 30
    iteration_statement  go to state 31
    statement            go to state 32
    expr_var             go to state 33
    selection_statement  go to state 34


state 23

   40 simple_statement: ';' .

    $default  reduce using rule 40 (simple_statement)


state 24

   50 expression: '(' . expression ')'

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 53
    expr_var             go to state 33


state 25

   37 simple_statement: type . declaration_variable ';'

    ID  shift, and go to state 54

    declaration_variable  go to state 55


state 26

   60 expression: assignment_variable .

    $default  reduce using rule 60 (expression)


state 27

   38 simple_statement: expression . ';'
   51 expression: expression . ',' expression
   52           | expression . EGAL expression
   53           | expression . DIFF expression
   54           | expression . '<' expression
   55           | expression . INFERIEUR_EGAL expression
   56           | expression . '>' expression
   57           | expression . SUPERIEUR_EGAL expression
   58           | expression . ET expression
   59           | expression . OU expression
   72           | expression . '+' expression
   73           | expression . '-' expression
   74           | expression . '*' expression
   75           | expression . '/' expression
   76           | expression . '%' expression
   77           | expression . '&' expression
   78           | expression . '|' expression
   79           | expression . '^' expression
   80           | expression . DEC_GAUCHE expression
   81           | expression . DEC_DROITE expression

    DEC_DROITE      shift, and go to state 56
    DEC_GAUCHE      shift, and go to state 57
    SUPERIEUR_EGAL  shift, and go to state 58
    INFERIEUR_EGAL  shift, and go to state 59
    DIFF            shift, and go to state 60
    EGAL            shift, and go to state 61
    ET              shift, and go to state 62
    OU              shift, and go to state 63
    ','             shift, and go to state 64
    '|'             shift, and go to state 65
    '^'             shift, and go to state 66
    '<'             shift, and go to state 67
    '>'             shift, and go to state 68
    '+'             shift, and go to state 69
    '-'             shift, and go to state 70
    '*'             shift, and go to state 71
    '/'             shift, and go to state 72
    '%'             shift, and go to state 73
    '&'             shift, and go to state 74
    ';'             shift, and go to state 75


state 28

   48 statement: simple_statement .

    $default  reduce using rule 48 (statement)


state 29

    4 genesis: '{' multiple_statement . '}'
   41 multiple_statement: multiple_statement . statement

    VOID       shift, and go to state 1
    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    CHAR       shift, and go to state 2
    INT32      shift, and go to state 3
    INT64      shift, and go to state 4
    RETURN     shift, and go to state 13
    WHILE      shift, and go to state 14
    FOR        shift, and go to state 15
    IF         shift, and go to state 16
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '{'        shift, and go to state 22
    '}'        shift, and go to state 76
    ';'        shift, and go to state 23
    '('        shift, and go to state 24

    type                 go to state 25
    assignment_variable  go to state 26
    expression           go to state 27
    simple_statement     go to state 28
    return               go to state 30
    iteration_statement  go to state 31
    statement            go to state 77
    expr_var             go to state 33
    selection_statement  go to state 34


state 30

   39 simple_statement: return . ';'

    ';'  shift, and go to state 78


state 31

   35 simple_statement: iteration_statement .

    $default  reduce using rule 35 (simple_statement)


state 32

   42 multiple_statement: statement .

    $default  reduce using rule 42 (multiple_statement)


state 33

   16 assignment_variable: expr_var . '='
   17 expression: expr_var . MUL_AFFECT
   18           | expr_var . DIV_AFFECT
   19           | expr_var . MOD_AFFECT
   20           | expr_var . PLUS_AFFECT
   21           | expr_var . MOINS_AFFECT
   22           | expr_var . DEC_GAUCHE_AFFECT
   23           | expr_var . DEC_DROITE_AFFECT
   24           | expr_var . ET_AFFECT
   25           | expr_var . OU_EXCL_AFFECT expression
   67           | expr_var . INCREMENT
   68           | expr_var . DECREMENT
   69           | expr_var .

    DEC_GAUCHE_AFFECT  shift, and go to state 79
    DEC_DROITE_AFFECT  shift, and go to state 80
    PLUS_AFFECT        shift, and go to state 81
    MOINS_AFFECT       shift, and go to state 82
    DIV_AFFECT         shift, and go to state 83
    MUL_AFFECT         shift, and go to state 84
    MOD_AFFECT         shift, and go to state 85
    ET_AFFECT          shift, and go to state 86
    OU_EXCL_AFFECT     shift, and go to state 87
    INCREMENT          shift, and go to state 88
    DECREMENT          shift, and go to state 89
    '='                shift, and go to state 90

    $default  reduce using rule 69 (expression)


state 34

   36 simple_statement: selection_statement .

    $default  reduce using rule 36 (simple_statement)


state 35

    0 $accept: program $end .

    $default  accept


state 36

    2 genesis: genesis declaration .

    $default  reduce using rule 2 (genesis)


state 37

   13 declaration_variable: ID .
   14                     | ID . '[' INT ']'
   15                     | ID . '=' expression
   26 declaration_function: type ID . '(' ')' declaration_function_statement
   27                     | type ID . '(' arguments_list ')' declaration_function_statement

    '='  shift, and go to state 91
    '['  shift, and go to state 92
    '('  shift, and go to state 93

    $default  reduce using rule 13 (declaration_variable)


state 38

    5 declaration: type multiple_declaration_variable . ';'
   12 multiple_declaration_variable: multiple_declaration_variable . ',' declaration_variable

    ','  shift, and go to state 94
    ';'  shift, and go to state 95


state 39

   11 multiple_declaration_variable: declaration_variable .

    $default  reduce using rule 11 (multiple_declaration_variable)


state 40

   82 expr_var: ID . '[' expression ']'
   83         | ID .

    '['  shift, and go to state 47

    $default  reduce using rule 83 (expr_var)


state 41

   65 expression: INCREMENT expr_var .

    $default  reduce using rule 65 (expression)


state 42

   66 expression: DECREMENT expr_var .

    $default  reduce using rule 66 (expression)


state 43

   44 return: RETURN expression .
   51 expression: expression . ',' expression
   52           | expression . EGAL expression
   53           | expression . DIFF expression
   54           | expression . '<' expression
   55           | expression . INFERIEUR_EGAL expression
   56           | expression . '>' expression
   57           | expression . SUPERIEUR_EGAL expression
   58           | expression . ET expression
   59           | expression . OU expression
   72           | expression . '+' expression
   73           | expression . '-' expression
   74           | expression . '*' expression
   75           | expression . '/' expression
   76           | expression . '%' expression
   77           | expression . '&' expression
   78           | expression . '|' expression
   79           | expression . '^' expression
   80           | expression . DEC_GAUCHE expression
   81           | expression . DEC_DROITE expression

    DEC_DROITE      shift, and go to state 56
    DEC_GAUCHE      shift, and go to state 57
    SUPERIEUR_EGAL  shift, and go to state 58
    INFERIEUR_EGAL  shift, and go to state 59
    DIFF            shift, and go to state 60
    EGAL            shift, and go to state 61
    ET              shift, and go to state 62
    OU              shift, and go to state 63
    ','             shift, and go to state 64
    '|'             shift, and go to state 65
    '^'             shift, and go to state 66
    '<'             shift, and go to state 67
    '>'             shift, and go to state 68
    '+'             shift, and go to state 69
    '-'             shift, and go to state 70
    '*'             shift, and go to state 71
    '/'             shift, and go to state 72
    '%'             shift, and go to state 73
    '&'             shift, and go to state 74

    $default  reduce using rule 44 (return)


state 44

   45 iteration_statement: WHILE '(' . expression ')' statement

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 96
    expr_var             go to state 33


state 45

   46 iteration_statement: FOR '(' . loop_expression ';' loop_expression ';' loop_expression ')' statement

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 97
    loop_expression      go to state 98
    expr_var             go to state 33


state 46

   84 selection_statement: IF '(' . expression ')' statement ELSE statement
   85                    | IF '(' . expression ')' statement

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 99
    expr_var             go to state 33


state 47

   82 expr_var: ID '[' . expression ']'

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 100
    expr_var             go to state 33


state 48

   70 expression: ID '(' . expression ')'
   71           | ID '(' . ')'

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24
    ')'        shift, and go to state 101

    assignment_variable  go to state 26
    expression           go to state 102
    expr_var             go to state 33


state 49

   51 expression: expression . ',' expression
   52           | expression . EGAL expression
   53           | expression . DIFF expression
   54           | expression . '<' expression
   55           | expression . INFERIEUR_EGAL expression
   56           | expression . '>' expression
   57           | expression . SUPERIEUR_EGAL expression
   58           | expression . ET expression
   59           | expression . OU expression
   61           | '-' expression .
   72           | expression . '+' expression
   73           | expression . '-' expression
   74           | expression . '*' expression
   75           | expression . '/' expression
   76           | expression . '%' expression
   77           | expression . '&' expression
   78           | expression . '|' expression
   79           | expression . '^' expression
   80           | expression . DEC_GAUCHE expression
   81           | expression . DEC_DROITE expression

    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '%'  shift, and go to state 73
    '&'  shift, and go to state 74

    $default  reduce using rule 61 (expression)


state 50

   51 expression: expression . ',' expression
   52           | expression . EGAL expression
   53           | expression . DIFF expression
   54           | expression . '<' expression
   55           | expression . INFERIEUR_EGAL expression
   56           | expression . '>' expression
   57           | expression . SUPERIEUR_EGAL expression
   58           | expression . ET expression
   59           | expression . OU expression
   63           | '!' expression .
   72           | expression . '+' expression
   73           | expression . '-' expression
   74           | expression . '*' expression
   75           | expression . '/' expression
   76           | expression . '%' expression
   77           | expression . '&' expression
   78           | expression . '|' expression
   79           | expression . '^' expression
   80           | expression . DEC_GAUCHE expression
   81           | expression . DEC_DROITE expression

    '&'  shift, and go to state 74

    $default  reduce using rule 63 (expression)


state 51

   51 expression: expression . ',' expression
   52           | expression . EGAL expression
   53           | expression . DIFF expression
   54           | expression . '<' expression
   55           | expression . INFERIEUR_EGAL expression
   56           | expression . '>' expression
   57           | expression . SUPERIEUR_EGAL expression
   58           | expression . ET expression
   59           | expression . OU expression
   62           | '~' expression .
   72           | expression . '+' expression
   73           | expression . '-' expression
   74           | expression . '*' expression
   75           | expression . '/' expression
   76           | expression . '%' expression
   77           | expression . '&' expression
   78           | expression . '|' expression
   79           | expression . '^' expression
   80           | expression . DEC_GAUCHE expression
   81           | expression . DEC_DROITE expression

    '&'  shift, and go to state 74

    $default  reduce using rule 62 (expression)


state 52

   41 multiple_statement: multiple_statement . statement
   47 statement: '{' multiple_statement . '}'

    VOID       shift, and go to state 1
    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    CHAR       shift, and go to state 2
    INT32      shift, and go to state 3
    INT64      shift, and go to state 4
    RETURN     shift, and go to state 13
    WHILE      shift, and go to state 14
    FOR        shift, and go to state 15
    IF         shift, and go to state 16
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '{'        shift, and go to state 22
    '}'        shift, and go to state 103
    ';'        shift, and go to state 23
    '('        shift, and go to state 24

    type                 go to state 25
    assignment_variable  go to state 26
    expression           go to state 27
    simple_statement     go to state 28
    return               go to state 30
    iteration_statement  go to state 31
    statement            go to state 77
    expr_var             go to state 33
    selection_statement  go to state 34


state 53

   50 expression: '(' expression . ')'
   51           | expression . ',' expression
   52           | expression . EGAL expression
   53           | expression . DIFF expression
   54           | expression . '<' expression
   55           | expression . INFERIEUR_EGAL expression
   56           | expression . '>' expression
   57           | expression . SUPERIEUR_EGAL expression
   58           | expression . ET expression
   59           | expression . OU expression
   72           | expression . '+' expression
   73           | expression . '-' expression
   74           | expression . '*' expression
   75           | expression . '/' expression
   76           | expression . '%' expression
   77           | expression . '&' expression
   78           | expression . '|' expression
   79           | expression . '^' expression
   80           | expression . DEC_GAUCHE expression
   81           | expression . DEC_DROITE expression

    DEC_DROITE      shift, and go to state 56
    DEC_GAUCHE      shift, and go to state 57
    SUPERIEUR_EGAL  shift, and go to state 58
    INFERIEUR_EGAL  shift, and go to state 59
    DIFF            shift, and go to state 60
    EGAL            shift, and go to state 61
    ET              shift, and go to state 62
    OU              shift, and go to state 63
    ','             shift, and go to state 64
    '|'             shift, and go to state 65
    '^'             shift, and go to state 66
    '<'             shift, and go to state 67
    '>'             shift, and go to state 68
    '+'             shift, and go to state 69
    '-'             shift, and go to state 70
    '*'             shift, and go to state 71
    '/'             shift, and go to state 72
    '%'             shift, and go to state 73
    '&'             shift, and go to state 74
    ')'             shift, and go to state 104


state 54

   13 declaration_variable: ID .
   14                     | ID . '[' INT ']'
   15                     | ID . '=' expression

    '='  shift, and go to state 91
    '['  shift, and go to state 92

    $default  reduce using rule 13 (declaration_variable)


state 55

   37 simple_statement: type declaration_variable . ';'

    ';'  shift, and go to state 105


state 56

   81 expression: expression DEC_DROITE . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 106
    expr_var             go to state 33


state 57

   80 expression: expression DEC_GAUCHE . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 107
    expr_var             go to state 33


state 58

   57 expression: expression SUPERIEUR_EGAL . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 108
    expr_var             go to state 33


state 59

   55 expression: expression INFERIEUR_EGAL . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 109
    expr_var             go to state 33


state 60

   53 expression: expression DIFF . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 110
    expr_var             go to state 33


state 61

   52 expression: expression EGAL . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 111
    expr_var             go to state 33


state 62

   58 expression: expression ET . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 112
    expr_var             go to state 33


state 63

   59 expression: expression OU . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 113
    expr_var             go to state 33


state 64

   51 expression: expression ',' . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 114
    expr_var             go to state 33


state 65

   78 expression: expression '|' . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 115
    expr_var             go to state 33


state 66

   79 expression: expression '^' . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 116
    expr_var             go to state 33


state 67

   54 expression: expression '<' . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 117
    expr_var             go to state 33


state 68

   56 expression: expression '>' . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 118
    expr_var             go to state 33


state 69

   72 expression: expression '+' . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 119
    expr_var             go to state 33


state 70

   73 expression: expression '-' . expression

    INCREMENT  shift, and go to state 11
    DECREMENT  shift, and go to state 12
    ID         shift, and go to state 17
    INT        shift, and go to state 18
    '-'        shift, and go to state 19
    '!'        shift, and go to state 20
    '~'        shift, and go to state 21
    '('        shift, and go to state 24

    assignment_variable  go to state 26
    expression           go to state 120
    expr_var             go to state 33


state 71

   74 expression: expression '*' . expression
